# wiberg-minimization

./: BUILD_NOTES  CMakeLists.txt  DISCLAIMER  README
l1/: CMakeLists.txt
l1/factorization/: CMakeLists.txt  factor_simultaneous.cc  factor_simultaneous.h  factor_simultaneous_test.cc  factor_wiberg.cc  factor_wiberg.h  factor_wiberg_test.cc  observation_to_row_map.cc  observation_to_row_map.h  solve_V.cc  solve_V.h  solve_V_j.cc  solve_V_j.h
l1/linear_system/: CMakeLists.txt  basis.cc  basis.h  linear_program.cc  linear_program.h  linear_system_l1.cc  linear_system_l1.h  linear_system_l1_derivatives.cc  linear_system_l1_derivatives.h
multiple_instance/: CMakeLists.txt  wiberg_multiple_instance_learning.cc  wiberg_multiple_instance_learning.h
utility/matrix/: CMakeLists.txt  matrix_utility.cc  matrix_utility.h
